--- a/marketplace-app/.env.docker
+++ b/marketplace-app/.env.docker
@@ -1,11 +1,38 @@
-STORE_CORS=http://localhost:8000,https://docs.medusajs.com
-ADMIN_CORS=http://localhost:5173,http://localhost:9000,https://docs.medusajs.com
-AUTH_CORS=http://localhost:5173,http://localhost:9000,https://docs.medusajs.com
-REDIS_URL=redis://localhost:6379
-JWT_SECRET=supersecret
-COOKIE_SECRET=supersecret
+# .env.docker - Production environment variables
+# Copy this to marketplace-app/.env.docker
+
+# Database
 DB_NAME=marketplace
 DATABASE_URL=postgres://marketplace:super-secure-password@postgres:5432/marketplace?ssl_mode=disable
-NODE_ENV=development
+
+# CRITICAL FOR IMAGES: Your public API URL
+# This is used by both admin dashboard and file storage to generate correct URLs
+MEDUSA_BACKEND_URL=https://api.vintagevault.gr
+
+# CORS settings
+STORE_CORS=https://store.vintagevault.gr
+ADMIN_CORS=https://api.vintagevault.gr
+AUTH_CORS=https://api.vintagevault.gr
+
+# Secrets - CHANGE THESE IN PRODUCTION!
+JWT_SECRET=your-super-secret-jwt-key-change-me
+COOKIE_SECRET=your-super-secret-cookie-key-change-me
+
+# Plugin settings
 API_KEY=supersecret
-VITE_BACKEND_URL=http://localhost:9000
+VITE_BACKEND_URL=https://api.vintagevault.gr
+
+# Optional: S3/Object Storage for production file storage
+# S3_FILE_URL=https://your-bucket.s3.eu-central-1.amazonaws.com
+# S3_ACCESS_KEY_ID=your-access-key
+# S3_SECRET_ACCESS_KEY=your-secret-key
+# S3_REGION=eu-central-1
+# S3_BUCKET=your-bucket-name
+# For S3-compatible services (MinIO, Hetzner Object Storage):
+# S3_ENDPOINT=https://fsn1.your-objectstorage.com
+
+# Redis (if using)
+REDIS_URL=redis://redis:6379
+
+# Disable telemetry
+MEDUSA_TELEMETRY_DISABLED=true
