--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,6 +15,9 @@ on:
         default: 'latest'
         type: string
 
+env:
+  WORKING_DIR: marketplace-app
+
 jobs:
   deploy:
     name: Deploy to Hetzner
@@ -31,7 +34,7 @@ jobs:
             VERSION="${{ github.event.inputs.version }}"
           else
             # Get the latest version from VERSION file
-            VERSION="v$(cat VERSION)"
+            VERSION="v$(cat ${{ env.WORKING_DIR }}/VERSION)"
           fi
           echo "version=$VERSION" >> $GITHUB_OUTPUT
           echo "Deploying version: $VERSION"
@@ -44,6 +47,7 @@ jobs:
           SERVER_PORT: ${{ vars.SERVER_PORT }}
           DEPLOY_PATH: ${{ vars.DEPLOY_PATH }}
           DOCKER_IMAGE: ${{ vars.DOCKER_USERNAME }}/${{ vars.DOCKER_IMAGE_NAME }}
+          CONTAINER_NAME: ${{ vars.CONTAINER_NAME }}
         run: |
           # Setup SSH
           mkdir -p ~/.ssh
@@ -53,8 +57,11 @@ jobs:
           # Add server to known hosts
           ssh-keyscan -p ${SERVER_PORT:-22} -H $SERVER_HOST >> ~/.ssh/known_hosts 2>/dev/null || true
           
+          # Export variables for remote execution
+          DEPLOY_VERSION="${{ steps.version.outputs.version }}"
+          
           # Run deployment script on remote server
-          ssh -i ~/.ssh/deploy_key -p ${SERVER_PORT:-22} ${SERVER_USER}@${SERVER_HOST} << 'ENDSSH'
+          ssh -i ~/.ssh/deploy_key -p ${SERVER_PORT:-22} ${SERVER_USER}@${SERVER_HOST} << ENDSSH
             set -e
             
             # Navigate to deployment directory
@@ -66,7 +73,7 @@ jobs:
             
             # Run deployment script
             if [ -f deploy.sh ]; then
-              ./deploy.sh ${{ steps.version.outputs.version }}
+              ./deploy.sh ${DEPLOY_VERSION}
             else
               echo "ERROR: deploy.sh not found in ${DEPLOY_PATH:-/opt/marketplace}"
               exit 1
