Pass STORE_REGISTRATION_CODE to container via docker-compose

--- a/marketplace-app/docker-compose.production.yml
+++ b/marketplace-app/docker-compose.production.yml
@@ -25,7 +25,8 @@ services:
       # Secrets
       - JWT_SECRET=${JWT_SECRET}
       - COOKIE_SECRET=${COOKIE_SECRET}
-      
+      - STORE_REGISTRATION_CODE=${STORE_REGISTRATION_CODE}
+
       # Optional features
       - IS_CHANNEL_PRICING_ENABLED=${IS_CHANNEL_PRICING_ENABLED:-false}
       
