Add Stripe payments, commission tracking, and order metadata
- Configure Stripe payment provider (capture: true) in medusa-config.ts
- Move order-store linking and commission metadata to order.placed subscriber
- Stripe PaymentIntent updated with order_id, store_id, store_name on each order
- Handle duplicate customer-store link error gracefully
- Add order commission widget to admin (Greek labels, 10% breakdown)
- Strip order-created hook (logic moved to subscriber)

--- a/marketplace-app/docker-compose.production.yml
+++ b/marketplace-app/docker-compose.production.yml
@@ -27,6 +27,10 @@ services:
       - COOKIE_SECRET=${COOKIE_SECRET}
       - STORE_REGISTRATION_CODE=${STORE_REGISTRATION_CODE}
 
+      # Stripe payment provider
+      - STRIPE_API_KEY=${STRIPE_API_KEY}
+      - STRIPE_WEBHOOK_SECRET=${STRIPE_WEBHOOK_SECRET}
+
       # Optional features
       - IS_CHANNEL_PRICING_ENABLED=${IS_CHANNEL_PRICING_ENABLED:-false}
       
