--- a/marketplace-app/package.json
+++ b/marketplace-app/package.json
@@ -71,7 +71,7 @@
     "@imgly/background-removal-node": "^1.4.5",
     "@medusajs/icons": "^2.11.1",
     "@medusajs/js-sdk": "^2.11.1",
-    "@medusajs/payment-stripe": "^2.13.1",
+    "@medusajs/payment-stripe": "2.11.3",
     "@medusajs/types": "^2.11.1",
     "sharp": "^0.34.5"
   },
